# AABA

./: .env.example  CONTRIBUTING.md  LICENSE  README.md
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.celery  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: job_tasks.py  lead_agent.py  orchestrator.py
backend/app/api/: agents.py  jobs.py  monitoring.py
backend/app/core/: config.py  database.py  events.py  metrics.py  minio_client.py  observability.py  openai_client.py  vector_store.py
backend/app/workers/: job_tasks.py
docs/: agent.md  infrastructure-overview.md
frontend/: Dockerfile  package.json
frontend/src/lib/: api.ts
frontend/src/pages/: index.tsx
infra/: docker-compose.yml
infra/grafana/provisioning/dashboards/json/: aaba-overview.json
infra/grafana/provisioning/datasources/: datasource.yml
infra/loki/: config.yaml
infra/otel/: otel-collector-config.yaml
infra/prometheus/: prometheus.yml
infra/promtail/: config.yaml
