[project]
name = "backend"
version = "0.1.0"
description = "Autonomous AI Business Agent backend"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "celery[redis]",
    "redis",
    "pymongo",
    "psycopg[binary]",
    "sqlalchemy",
    "alembic",
    "python-dotenv",
    "httpx",
    "openai",
    "openai-agents>=0.3.1",
]

[tool.uv]
dev-dependencies = ["pytest", "ruff", "black", "mypy"]

License = "MIT"
